fw/ruletest.v4
# Generated by iptables-save v1.4.21 on Mon May 11 21:14:06 2015
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8887 -j DROP
-A INPUT -p tcp -m tcp --dport 8889 -j DROP
-A INPUT -p tcp -m tcp --dport 3128 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2121 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 443 -j ACCEPT
-A OUTPUT -s 91.189.92.201/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -s 91.189.91.23/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -s 91.189.92.200/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -s 91.189.91.24/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -s 91.189.91.14/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -s 91.189.91.15/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -s 91.189.91.13/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -s 91.189.88.149/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Mon May 11 21:14:06 2015
